samples/_failures_safe/1761279947_581ffb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a2fdc01.c: In function ‘main’:
./samples/SAFE/__tmp_2a2fdc01.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
